deploy/base/ingress.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Mixer Kubernetes Ingress config (https://kubernetes.io/docs/concepts/services-networking/ingress/)
# The ingress exposes the mixer service to port :80.
# It binds to the static ip and managed ssl certificate when deployed to GKE.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mixer-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: mixer-ip
    networking.gke.io/managed-certificates: mixer-certificate
spec:
  rules:
  -  http:
      paths:
      - path: /*
        backend:
          serviceName: mixer-service
          servicePort: 80
